test_fm/_test58.ref
Error: left operand of arithmetic expression must be an Integer in '_test58.nj' on line 10
