test_fm/_test58.nj
//
// left operand not integer
//


public class Main extends Object {

  public static void main() {
    local Integer x;
    x = 'a' + 5;
  }

}
